testsuite/bsc.interra/messages/EDupField/EDupField2.bs.bsc-out.expected
checking package dependencies
compiling EDupField2.bs
Error: "EDupField2.bs", line 20, column 21: (T0017)
  Field `fst' defined more than once
